--- a/Application/Share&Ride/app/src/main/res/layout/twolines.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/twolines.xml
@@ -6,44 +6,81 @@
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        >
+        <TextView
+            android:id="@+id/line_a"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_marginTop="10dp"
+            android:textSize="25dp"
+            />
 
-    <TextView
-        android:id="@+id/line_a"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="10dp"
-        android:textSize="25dp"
-         />
+        <TextView
+            android:id="@+id/line_b"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="25dp" />
+        <TextView
+            android:id="@+id/line_c"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="20dp"
+            />
 
-    <TextView
-        android:id="@+id/line_b"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="25dp" />
-    <TextView
-        android:id="@+id/line_c"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20dp"
-         />
+        <TextView
+            android:id="@+id/line_d"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="20dp" />
+        <TextView
+            android:id="@+id/line_e"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_marginBottom="10dp"
+            android:textSize="20dp"
+            />
 
-    <TextView
-        android:id="@+id/line_d"
+
+
+
+
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="20dp" />
-    <TextView
-        android:id="@+id/line_e"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginBottom="10dp"
-        android:textSize="20dp"
-         />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="2"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add now"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60dp"
+            android:id="@+id/addnow"
+            />
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
 
 
 </LinearLayout>
