--- a/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
+++ b/Application/Share&Ride/app/src/main/res/layout/activity_chat.xml
@@ -19,6 +19,14 @@
         android:textSize="25dp"
         android:textColor="@android:color/holo_blue_dark"/>
 
+<Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/delete"
+    android:text="Delete"
+    android:textColor="@android:color/holo_red_dark"
+    android:textSize="20dp"
+    android:background="@android:color/transparent"/>
 
         <LinearLayout
             android:layout_width="match_parent"
